attempt to fix colhead alignment

--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,7 @@ td {
   padding: 10px;
   text-align: center;
   justify-content: center;
+  align-content: center;
   text-transform: uppercase;
   background-color: #7e0825;
   
